# tempus-cli

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.agents/skills/tempus-cli/: SKILL.md
.github/workflows/: ci.yml
docs/discovery/: tempus-authenticated-read-rpcs.md
tempus_cli/: api.py  cli.py  discover.py  errors.py  freja.py  gwt.py  models.py  net.py  paths.py  pickup_fixtures.py  redact.py  session.py  session_store.py  transport.py  upcoming_events_fixtures.py
tests/: test_api.py  test_cli.py  test_discover.py  test_freja.py  test_gwt.py  test_models.py  test_pickup_fixtures.py  test_redact.py  test_session.py  test_session_store.py  test_transport.py  test_upcoming_events_fixtures.py
tests/fixtures/pickup_date_assignment/: children_and_notifications.json  malformed_non_ok.json  read_after.json  read_before.json  server_validation_error.json  update_schedule_assignment.json  verification_mismatch.json  week_schedules.json  write_assignment.json
tests/fixtures/upcoming_events/: home_overview_data.json
